# function_call_finetuner

./: .gitignore  README.md  pyproject.toml  run_bulk.zsh  run_bulk_descs.zsh  run_bulk_samples.zsh  run_generate.py
dataset_builder/: data_sample_generators.py  message_templates.py
description_builder/: description_generator.py  message_templates.py
outputs/: test_generate_samples.jsonl  test_generate_snippets.jsonl
outputs/descriptions/: airbnb_descriptions.jsonl  airesearch_descriptions.jsonl  business_descriptions.jsonl  business_tasks_descriptions.jsonl  businesstraveller_descriptions.jsonl  designconsultant_descriptions.jsonl  freelancecoder_descriptions.jsonl  personalassistant_descriptions.jsonl  shopify_descriptions.jsonl  twitch_descriptions.jsonl  twitter_descriptions.jsonl  uberdriver_descriptions.jsonl  ubereats_descriptions.jsonl  youtube_descriptions.jsonl
outputs/samples/: airbnb_descriptions_samples.jsonl  airesearch_descriptions_samples.jsonl  business_descriptions_samples.jsonl  business_tasks_descriptions_samples.jsonl  businesstraveller_descriptions_samples.jsonl  designconsultant_descriptions_samples.jsonl  freelancecoder_descriptions_samples.jsonl  personalassistant_descriptions_samples.jsonl  shopify_descriptions_samples.jsonl  twitch_descriptions_samples.jsonl  twitter_descriptions_samples.jsonl  (+4 more)
snippet_builder/: message_templates.py
test_data/: business-tasks.jsonl  function_templates.py  snippet_templates.py  test_function_descriptions.jsonl  test_function_snippets.jsonl
util/: argparser.py  json_utils.py  print_utils.py
(+28 files in other folders)
