[tool.poetry]
name = "function-call-finetuner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.9"
termcolor = "^2.3.0"
networkx = "^3.1"
python-dotenv = "^1.0.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
